# Diagnosticism

./: AUTHORS.md  CHANGES.md  CMakeLists.txt  INSTALL.md  LICENSE  NEWS.md  README.md  TODO.md  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
cmake/: TargetMacros.cmake
examples/: CMakeLists.txt
examples/abort/: CMakeLists.txt  main.c
examples/tracing/: CMakeLists.txt  main.c
include/diagnosticism/: abort.h  diagnosticism.h  doomgram.h  ev.h  tracing.h  version_string.h
src/: CMakeLists.txt  abort.c  api.c  doomgram.c  ev.c  tracing.c  version_string.c
test/: CMakeLists.txt
test/component/ev/: CMakeLists.txt  entry.cpp
test/unit/: CMakeLists.txt
test/unit/api_init/: CMakeLists.txt  entry.c
test/unit/api_version/: CMakeLists.txt  entry.c
test/unit/doomgram/: CMakeLists.txt  entry.c
test/unit/version_string/: CMakeLists.txt  entry.c
